ECS_Fargate/terraform/rds.tf

resource "aws_db_subnet_group" "main" {
  name       = "strapi-db-subnet-group"
  subnet_ids = aws_subnet.public[*].id  # In prod, use private subnets

  tags = {
    Name = "Strapi DB Subnet Group"
  }
}

resource "aws_db_instance" "default" {
  identifier           = "strapi-postgres"
  allocated_storage    = 20
  storage_type         = "gp2"
  engine               = "postgres"
  engine_version       = "16.1"
  instance_class       = "db.t3.micro"
  db_name              = var.db_name
  username             = var.db_username
  password             = var.db_password
  parameter_group_name = "default.postgres16"
  skip_final_snapshot  = true
  publicly_accessible  = true # Set to false in prod if using private subnets
  
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  db_subnet_group_name   = aws_db_subnet_group.main.name

  tags = {
    Name = "Strapi RDS"
  }
}
